# cpp-packagemanager

src/: Package.h  Project.cpp  Project.h  cppkg  cppkg.cpp  package.cpp
src/myproj/: CMakeLists.txt  cppkg
template/: main_to_copy.cpp  packages.txt
